styles/global-blocks.css
/* ... */
/* Job listing page */
.listing-container {
  @media (min-width: 67.5rem) {
    display: grid;
    grid-template-columns: 70ch 1fr 3fr;
    grid-template-rows: auto 1fr;
    grid-template-areas:
      "title title title"
      "content . details";
  }

  & > h1 {
    margin-block-end: 1rem;

    @media (min-width: 36rem) {
      margin-block-end: 2.5rem;
    }

    @media (min-width: 67.5rem) {
      margin-block-end: var(--spacing-global-block-end-medium-screen);
      grid-area: title;
    }

    @media (min-width: 105rem) {
      margin-block-end: 8.75rem;
    }
  }

  > .listing-details {
    @media (min-width: 67.5rem) {
      grid-area: details;
    }
  }

  > .listing-content {
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      margin-block-start: var(--spacing-heading-block-start-small-screen);

      @media (min-width: 22.5rem) {
        margin-block-start: var(--spacing-heading-block-start-medium-screen);
      }

      @media (min-width: 48rem) {
        margin-block-start: var(--spacing-heading-block-start-large-screen);
      }

      @media (min-width: 67.5rem) {
        margin-block-start: var(--spacing-heading-block-start-xl-screen);
      }
    }

    & > h2:first-of-type {
      margin-block-start: 0;
    }

    @media (min-width: 67.5rem) {
      grid-area: content;
    }
  }
}

.listing-details {
  display: grid;
  gap: 1rem;
  grid-template-areas:
    "button button"
    "location location"
    "detail-grid detail-grid";

  @media (min-width: 36rem) {
    grid-template-columns: 1fr 2fr auto;
    grid-template-areas: "location detail-grid button";
  }

  @media (min-width: 67.5rem) {
    align-self: start;
    position: sticky;
    top: calc(5rem + var(--page-nav-height));
    display: flex;
    flex-direction: column;
  }

  .listing-details__button {
    grid-area: button;

    &.listing-details__button--first {
      display: inline-flex;

      @media (min-width: 36rem) {
        display: none;
      }

      @media (min-width: 67.5rem) {
        display: inline-flex;
        margin-block-end: 3rem;
      }
    }

    &.listing-details__button--last {
      display: none;

      @media (min-width: 36rem) {
        display: inline-flex;
        align-self: start;
        width: auto;
      }

      @media (min-width: 67.5rem) {
        display: none;
      }
    }
  }
}

.listing-details-grid {
  grid-area: detail-grid;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1rem;
  align-self: start;

  @media (min-width: 67.5rem) {
    display: flex;
    flex-direction: column;
  }
}

.listing-detail--location {
  --listing-detail-location-column-gap: 1rem;

  grid-area: location;
  display: flex;
  flex-wrap: wrap;
  column-gap: var(--listing-detail-location-column-gap);

  @media (min-width: 36rem) {
    flex-wrap: unset;
    flex-direction: column;
  }

  .listing-detail__name--location {
    flex: 1 0 100%;

    @media (min-width: 36rem) {
      flex: unset;
    }
  }

  .listing-detail__content--location {
    flex: 1 1 calc(50% - var(--listing-detail-location-column-gap));

    @media (min-width: 36rem) {
      flex: unset;
    }
  }
}

.listing-detail__name,
.listing-detail__content {
  display: block;
}

.listing-detail {
  .listing-detail__name {
    font-weight: var(--spectrum-extra-bold-font-weight);

    @media (min-width: 36rem) {
      font-size: var(--spectrum-font-size-400);
    }

    @media (min-width: 67.5rem) {
      font-size: var(--spectrum-font-size-600);
    }
  }

  .listing-detail__content {
    @media (min-width: 36rem) {
      font-size: var(--spectrum-font-size-200);
    }

    @media (min-width: 67.5rem) {
      font-weight: var(--spectrum-medium-font-weight);
      font-size: var(--spectrum-font-size-300);
    }
  }
}

.listing-detail__name--location {
  flex: 1 0 100%;

  @media (min-width: 36rem) {
    flex: unset;
  }
}

.listing-detail__content--location {
  flex: 1 1 50%;

  @media (min-width: 36rem) {
    flex: unset;
  }
}

.listing-prefooter {
  margin-block-end: var(--spacing-global-block-end-small-screen);
  max-width: 80ch;
  font-size: var(--spectrum-font-size-200);

  @media (min-width: 80rem) {
    margin-block-end: var(--spacing-global-block-end-medium-screen);
  }

  @media (min-width: 105rem) {
    margin-block-end: var(--spacing-global-block-end-large-screen);
  }
}

.image-with-caption {
  --image-with-caption-gap: 1rem;

  width: 100%;
  display: flex;
  flex-direction: column;
  gap: var(--image-with-caption-gap);
  margin: 1.5rem 0;

  @media (min-width: 48rem) {
    margin-block: 2.5rem;
  }

  & .image-with-caption__image img {
    display: block;
    width: 100%;
    height: auto;
    border-radius: var(--spectrum-corner-radius-800);
  }

  & .image-with-caption__caption {
    display: block;
    color: var(--spectrum-gray-600);

    em {
      font-style: normal;
    }

    & > * {
      font-family: var(--detail-font-family);
      line-height: 1.3;
      font-size: var(--detail-size-s);
      font-weight: var(--detail-font-weight);

      &:first-child {
        margin-block-start: 0;
      }
      &:last-child {
        margin-block-end: 0;
      }
    }

    & a {
      color: currentColor;
      text-decoration: underline;

      &:hover {
        text-decoration: none;
      }
    }
  }
}

.article-content article > :is(h2, h3) + .image-with-caption,
.article-content article > div:has(> h2:last-child, > h3:last-child) + .image-with-caption {
  margin-block-start: 1.5rem;
}

.image-with-caption div:has(p):not([class]) + .image-with-caption {
  margin-block-start: 2rem;

  @media (min-width: 48rem) {
    margin-block-start: 2.5rem;
  }

  @media (min-width: 80rem) {
    margin-block-start: 4rem;
  }
}

.image-with-caption--two-up {
  @media (min-width: 48rem) {
    flex-direction: row;
    flex-wrap: wrap;

    & .image-with-caption__image {
      flex: 0 1 calc(50% - (var(--image-with-caption-gap) / 2));
    }

    & .image-with-caption__caption {
      flex: 1 0 100%;
    }
  }
}
/* ... */

